# compass

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
compass/: config.py  llm.py
compass/analysis/: __init__.py  gap_aggregator.py  skill_assessor.py
compass/applications/: bulk_archive.py  lifecycle.py
compass/evals/: calibrator.json  calibrator.py  costs.py  dataset.py  judge.py  labeled_dataset.json  metrics.py  runner.py
compass/hitl/: __init__.py  resume.py  state_store.py  sync_decisions.py  timeout_checker.py  vault_view.py
compass/mcp_server/: server.py
compass/pipeline/: add_url.py  cover_letter.py  graph.py  location_filter.py  role_family.py  state.py
compass/pipeline/nodes/: extract.py  hitl.py  intake.py  intake_filter.py  reflect.py  score.py  tailor.py  vault_write.py
compass/rag/: indexer.py  retriever.py
compass/scrapers/: _html.py  _interleave.py  _pre_filter.py  _remote_parser.py  ashby.py  greenhouse.py  jobspy_wrapper.py  lever.py  workday.py
compass/vault/: frontmatter_utils.py  learning_bridge.py  reader.py  schemas.py  target_companies.py  taxonomy.py  url_dedup.py  writer.py
docs/: ARCHITECTURE.md  HOW_COMPASS_WORKS.md  KNOWN_DATA_QUALITY_ISSUES.md  NEXT_SESSION.md  OBSIDIAN_LEVERAGE.md  OBSIDIAN_LEVERAGE_PART_2.md  PHASE_0_COMPLETE.md  PHASE_1A_COMPLETE.md  PROJECT_OVERVIEW.md  ROADMAP.md  RUNBOOK.md  STATUS.md  TOMORROW.md  TWO_WEEK_SPRINT.md
docs/archive/: NEXT_SESSION.md  OBSIDIAN_LEVERAGE.md  OBSIDIAN_LEVERAGE_PART_2.md  PHASE_0_COMPLETE.md  PHASE_1A_COMPLETE.md  README.md  TWO_WEEK_SPRINT.md
docs/archive/superpowers/plans/: 2026-05-16-architecture-amendments.md  2026-05-17-compass-phase-0b-pipeline-mvp.md  2026-05-18-compass-phase-1b1-hitl.md  2026-05-19-compass-phase-1b2-rag.md
docs/archive/superpowers/specs/: 2026-05-17-compass-mvp-to-portfolio-ship-design.md
docs/superpowers/plans/: 2026-05-16-architecture-amendments.md  2026-05-17-compass-phase-0a-foundation.md  2026-05-17-compass-phase-0b-pipeline-mvp.md  2026-05-18-compass-phase-1a-application-tracking.md  2026-05-18-compass-phase-1b1-hitl.md  2026-05-19-compass-phase-1b2-rag.md  phase-1-data-layer.md
docs/superpowers/specs/: 2026-05-17-compass-mvp-to-portfolio-ship-design.md  2026-05-18-compass-phase-1a-application-tracking.md
scripts/: add_synthetic_eval_records.py  apply_hand_labels.py  cleanup_stale_jobnotes.py  demo_trace.py  label_jd.py  migrate_jobnote_skills_section.py  migrate_role_family.py  seed_companies_from_yaml.py  seed_skills.py  seed_vault.py  test_scrape.py  test_vault_roundtrip.py
tests/: conftest.py  test_bulk_archive.py  test_hitl_state.py  test_hitl_vault_view.py  test_llm.py  test_location_filter.py  test_mcp_get_profile_traversal.py  test_mcp_path_traversal.py  test_mcp_server.py  test_parallel.py  test_pipeline.py  test_pre_filter.py  test_rag.py  test_scraper_interleave.py  test_scrapers.py  test_sync_decisions.py  test_vault.py  test_vault_url_dedup.py  test_workday_page_size.py
tests/analysis/: test_gap_aggregator_role_filter.py  test_skill_backlinks.py
tests/applications/: test_lifecycle.py
tests/evals/: test_dataset.py  test_label_jd_cli.py  test_metrics.py  test_runner.py
tests/fixtures/: skill-taxonomy.md
tests/hitl/: conftest.py  test_claim_pending.py  test_resume.py  test_state_store.py  test_timeout_checker.py
tests/mcp_server/: test_pending_approvals.py
tests/pipeline/: test_add_url.py  test_add_url_scheme.py  test_auto_tags.py  test_checkpoint_serde.py  test_extract.py  test_graph_checkpointing.py  test_graph_integration.py  test_hitl_node_interrupt.py  test_intake.py  test_intake_filter.py  test_role_family.py  test_role_family_no_mobile_upgrade.py  test_routing.py  test_score.py  test_score_node_rag.py  test_scrape_recency.py  test_tailor.py  test_tailor_score_gate.py  test_vault_write.py
tests/rag/: conftest.py  test_indexer.py  test_retriever.py
tests/scrapers/: test_ashby.py  test_greenhouse.py  test_lever.py  test_remote_parser.py  test_workday.py  test_workday_url_resolution.py
tests/vault/: test_application_writer.py  test_company_counters.py  test_learning_bridge_traversal.py  test_normalize_defensive.py  test_reader.py  test_target_companies.py  test_target_companies_aliases.py  test_target_companies_yaml.py  test_taxonomy.py  test_url_dedup.py  test_writer.py
