[project]
name = "compass"
version = "0.1.0"
description = "Compass: Agentic career coaching system"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langgraph>=0.2",
    "pydantic-ai>=0.0.14",
    "pydantic>=2.0",
    "langfuse>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-jobspy>=1.1",
    "httpx>=0.27",
    "aiofiles>=24.0",
    "python-dotenv>=1.0",
    "python-frontmatter>=1.1",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["compass"]
